--- a/Streamlink_Recorder.ipynb
+++ b/Streamlink_Recorder.ipynb
@@ -99,7 +99,7 @@
       "source": [
         "#@markdown <center><h3><h2>Stream Recorder</h2>Record any stream</h3></center><br>\n",
         "#@markdown 1- Go to your Google Drive and create a directory called \"stream\" (whitout quotes).\n",
-        "#@markdown <br />2- Mout Gdrive above.\n",
+        "#@markdown <br />2- Mount Gdrive above.\n",
         "#@markdown <br />3- Install Streamlink above.\n",
         "#@markdown <br />4- Start recording bellow.\n",
         "import os\n",
